# wrappy

./: CMakeLists.txt  README.md  main.cpp  privet.py
wrap_py/: CMakeLists.txt  WrapPy.cpp  WrapPy.h
