cmake_minimum_required(VERSION 3.5)
project(wrappy)
find_package(PythonLibs REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(wrap_py)
add_executable(py_wrap_test main.cpp)
#file(GLOB PYTHON_FILES "*.py")
#file(COPY ${PYTHON_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(py_wrap_test LINK_PUBLIC wrappy ${PYTHON_LIBRARIES} tcmalloc profiler)